2010-04-24  James Youngman  <jay@gnu.org>

	Include what you use; make it possible to use delta by
	including only delta.h.
	* delta.h: Include sid.h, sccsdate.h, mystring.h, mylist.h.
	Move typedef of seq_no to here from cssc.h
	* cssc.h: Move typesef of seq_no from here to delta.h.
	* sccsfile.h: Include delta.h.
	* seqstate.h: Likewise.
	* unit-tests/test_delta.cc: Include delta.h first.  Don't include cssc.h.

	Include what you use; make it possible to use range_list<T> by
	including only sid_list.h.
	* unit-tests/test_sid.cc: Include sid.h first.   Don't include cssc.h.
	* sid_list.h: Include cstdio, cstring, and qui.t.h (for ctor_fail).
	* sid.h: Include mystring.h.

	Include what you use; make it possible to use stack<T> by
	including only stack.h.
	* unit-tests/test_stack.cc: Include what you use: include
	"stack.h" but not "cssc.h".

	Include what you use; make it possible to use myset<T> by
	including only myset.h.
	* unit-tests/test_myset.cc: Include myset.h first.
	* myset.h: Include mylist.h since we use mylist<T>.

	Include what you use; make it possible to use mylist<> by
	including only mylist.h.
	* cssc-assert.h: New file; defines the ASSERT macro.
	* quit.h: Delete old definition of ASSERT and declaration of
	assert_failed.
	* mylist.h: Include cssc-assert.h to define ASSERT, and
	<cstdlib> for NULL.
	* unit-tests/test_mylist.cc: Don't include "cssc.h" any more.
	* quit.cc: Include cssc-assert.h for ASSERT and declaration of assert_failed.
	* fatalsig.cc: Include cssc-assert.h since we use ASSERT.
	* file.cc: Likewise.
	* filediff.cc: Likewise.
	* fnsplit.cc: Likewise.
	* linebuf.cc: Likewise.
	* sccsdate.cc: Likewise.
	* sccsname.cc: Likewise.
	* sid.h: Likewise.
	* stack.h: Likewise.

	Move CONFIG_LIST_CHUNK_SIZE from cssc.h to mylist.h.
	* cssc.h (CONFIG_LIST_CHUNK_SIZE): Move into mylist.h.
	* mylist.h (mylist): Relocate CONFIG_LIST_CHUNK_SIZE here from
	cssc.h, but convert it to an enum.

	Add/correct some comments.